# clipper

./: README.md  configuration_clipseg.py  processing_clipseg.py  testing_clipseg.py
cpp/: CMakeLists.txt
cpp/cmake/: ClipperConfig.cmake.in
cpp/config/: clipper.yaml
cpp/include/clipper/: clipper_model.hpp  processor.hpp  processor_mixins.hpp  tokenizer.hpp
cpp/src/: clipper_model.cpp  processor.cpp  processor_mixins.cpp  tokenizer.cpp
cpp/test/: test_merge.cpp  test_model.cpp  test_model_inference.cpp  test_normalize.cpp  test_processor.cpp  test_processor_mixins.cpp  test_tokenizer.cpp  test_vocab.cpp
python/: compiling_clipseg.py  modeling_clipseg.py  test_text.py  testing_clipseg.py
